--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
-.body {
+body {
   display: block;
   font-size: 70px;
+}
+
+.click {
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+
 }
