--- a/style.css
+++ b/style.css
@@ -1,11 +1,43 @@
+
 body {
-  display: block;
-  font-size: 70px;
+  background-color: grey;
 }
 
-.click {
+.playerInput {
+  border: 4px solid black;
   width: 100px;
   height: 100px;
-  border: 1px solid black;
+  display: inline-block;
+}
+.wrapper {
+  width: 400px;
+  height: 400px;
+  margin-top: 150px;
+  margin-left: 500px;
+
+}
+.row1 {
+  display: inline-block;
+  font-size: 70px;
+  color: white;
+  vertical-align: top;
+
+}
+.row2 {
+  display: inline-block; 
+  font-size: 70px;
+  vertical-align: top;
+  color: white;
+}
+.row3 {
+  display: inline-block;
+  font-size: 70px;
+  vertical-align: top;
+  color: white;
+}
+
+button {
+    vertical-align: top;
+    margin-top: 10px;
 
 }
