--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@ body {
   background-color: grey;
 }
 
+
+
 .playerInput {
-  border: 4px solid black;
+ 
+  border-style: outset;
   width: 100px;
   height: 100px;
   display: inline-block;
@@ -39,5 +42,8 @@ body {
 button {
     vertical-align: top;
     margin-top: 10px;
-
+    border-radius: 45px;
 }
+
+
+
