--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 
 body {
-  background-color: grey;
+    background:url('gifs/giphy.gif') no-repeat;
+    background-size: cover; 
+    height:300%;
+    width:300%;
 }
 
+h1 {
+  font-size: 90px;
+  margin-left: 200px;
+
+}
 
 
 .playerInput {
@@ -11,6 +19,9 @@ body {
   width: 100px;
   height: 100px;
   display: inline-block;
+  color: red;
+  border-radius: 55px;
+
 }
 .wrapper {
   width: 400px;
@@ -22,28 +33,24 @@ body {
 .row1 {
   display: inline-block;
   font-size: 70px;
-  color: white;
-  vertical-align: top;
 
 }
 .row2 {
   display: inline-block; 
   font-size: 70px;
   vertical-align: top;
-  color: white;
 }
 .row3 {
   display: inline-block;
   font-size: 70px;
   vertical-align: top;
-  color: white;
 }
 
-button {
-    vertical-align: top;
-    margin-top: 10px;
-    border-radius: 45px;
+.soundButton {
+  width: 50px;
+  height: 50px;
 }
+
 
 
 
